--- a/Cafe_2.html
+++ b/Cafe_2.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <div id="page1">
-    <img src="Menu1.jpg" alt="Page 1 Image">
+    <img src="./Menu1.jpg" alt="Page 1 Image">
 </div>
 </body>
 </html>
